project-3/archive/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: 992382792232.dkr.ecr.ap-northeast-2.amazonaws.com/front:v0.3
          ports:
            - containerPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: app
  name: server
  labels:
    app: server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: 992382792232.dkr.ecr.ap-northeast-2.amazonaws.com/server:v0.2
          ports:
            - containerPort: 3333
