project-3/archive/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: frontend
spec:
  type: ClusterIP
  selector:
    app: frontend
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  namespace: app
  name: server
spec:
  type: ClusterIP
  selector:
    app: server
  ports:
    - name: http
      port: 3333
      targetPort: 3333
      protocol: TCP
